--- a/Gabriel_David_Freire_Luna_AG1.ipynb
+++ b/Gabriel_David_Freire_Luna_AG1.ipynb
@@ -49,20 +49,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6a4ae892-fa11-41c8-d631-42fa5cf231a6"
+        "outputId": "1d86d4d3-9b12-43b7-e5a6-4699762f756b"
       },
       "source": [
         "#Torres de Hanoi - Divide y venceras\n",
         "################################################################################\n",
-        "\n",
-        "\n",
-        "################################################################\n",
         "def Torres_Hanoi(N, desde, hasta):\n",
+        "# Variables::\n",
         "# N:  No de fichas\n",
-        "# desde\n",
-        "# hasta\n",
+        "# desde : Torre desde donde sale la fecha\n",
+        "# hasta : Torre hacia donde va la fecha\n",
+        "\n",
+        "  #Si el No. de fichas es 1, sól hay una solución\n",
         "  if N == 1:\n",
         "    print (\"Mueve desde {} hasta {} \".format(desde, hasta))\n",
+        "  \n",
+        "  #En caso de que sean más de 1 ficha...\n",
         "  else:\n",
         "    Torres_Hanoi(N-1, desde, 6-desde-hasta)\n",
         "    print (\"Mueve desde {} hasta {} \".format(desde, hasta))\n",
@@ -71,11 +73,10 @@
         "    #Hasta: 3\n",
         "    #Pivote = 6-1-3 = 2 Torre 2 de pivote, por eso se usa el 6\n",
         "\n",
-        "\n",
-        "Torres_Hanoi(3, 1, 3)\n",
-        "################################################################"
+        "#Obtenemos los pasos que se deben de seguir para obtener la solución\n",
+        "Torres_Hanoi(3, 1, 3)"
       ],
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,22 +96,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UTL6wiczQVDA"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "YwBudj2hYoMR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b37f8be0-a9da-476f-bece-bd2513df5f8b"
+        "outputId": "2f0b5786-6c86-4eb1-abfb-9034d4f02e1b"
       },
       "source": [
         "#Cambio de monedas - Técnica voraz\n",
@@ -160,7 +150,7 @@
         "for i,v in enumerate(sistema):\n",
         "  print(\"{} monedas de {}\".format(solucion[i], sistema[i]))"
       ],
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,17 +174,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9toJ4WjhQUNj"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -292,76 +271,6 @@
           "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eTZclKH9QV0R"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iPcgVSMabXrU"
-      },
-      "source": [
-        "#Viaje por el rio - Programación dinámica\n",
-        "################################################################################\n",
-        "\n",
-        "TARIFAS = [\n",
-        "[0,5,4,3,999,999,999],\n",
-        "[999,0,999,2,3,999,11],\n",
-        "[999,999, 0,1,999,4,10],\n",
-        "[999,999,999, 0,5,6,9],\n",
-        "[999,999, 999,999,0,999,4],\n",
-        "[999,999, 999,999,999,0,3],\n",
-        "[999,999,999,999,999,999,0]\n",
-        "]\n",
-        "\n",
-        "#999 se puede sustituir por float(\"inf\")\n",
-        "\n",
-        "\n",
-        "#Calculo de la matriz de PRECIOS y RUTAS\n",
-        "################################################################  \n",
-        "def Precios(TARIFAS):\n",
-        "################################################################ \n",
-        "#....\n",
-        "\n",
-        "\n",
-        "PRECIOS,RUTA = Precios(TARIFAS)  \n",
-        "#print(PRECIOS[0][6])\n",
-        "\n",
-        "print(\"PRECIOS\")\n",
-        "for i in range(len(TARIFAS)):\n",
-        "  print(PRECIOS[i])\n",
-        "\n",
-        "print(\"\\nRUTA\")  \n",
-        "for i in range(len(TARIFAS)):\n",
-        "  print(RUTA[i])  \n",
-        "  \n",
-        "#Determinar la ruta con Recursividad\n",
-        "################################################################\n",
-        "def calcular_ruta(RUTA, desde, hasta):\n",
-        "################################################################\n",
-        "  if desde == hasta:\n",
-        "    #print(\"Ir a :\" + str(desde))\n",
-        "    return \"\" \n",
-        "  else:\n",
-        "    return str(calcular_ruta( RUTA, desde, RUTA[desde][hasta])) +  \\\n",
-        "                ',' + \\\n",
-        "                str(RUTA[desde][hasta] \\\n",
-        "              ) \n",
-        "\n",
-        "print(\"\\nLa ruta es:\")  \n",
-        "calcular_ruta(RUTA, 0,6) "
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
