--- a/Seminario_Algoritmos_Gabriel_Freire.ipynb
+++ b/Seminario_Algoritmos_Gabriel_Freire.ipynb
@@ -240,7 +240,7 @@
         "id": "tgrnsC2nkFa8"
       },
       "source": [
-        "# Calcula la complejidad del algoritmo por fuerza bruta"
+        "**# Calcula la complejidad del algoritmo por fuerza bruta**"
       ]
     },
     {
@@ -258,7 +258,7 @@
         "id": "txbrmLmskReM"
       },
       "source": [
-        "# (*)Diseña un algoritmo que mejore la complejidad del algortimo por fuerza bruta. Argumenta porque crees que mejora el algoritmo por fuerza bruta"
+        "# __(*)Diseña un algoritmo que mejore la complejidad del algortimo por fuerza bruta. Argumenta porque crees que mejora el algoritmo por fuerza bruta__"
       ]
     },
     {
@@ -523,7 +523,7 @@
         "id": "eGDB4K6uk1iN"
       },
       "source": [
-        "# (*)Calcula la complejidad del algoritmo "
+        "# __(*)Calcula la complejidad del algoritmo__"
       ]
     },
     {
@@ -541,7 +541,7 @@
         "id": "3M6QjTsSkmYe"
       },
       "source": [
-        "# Según el problema (y tenga sentido), diseña un juego de datos de entrada aleatorios"
+        "# __Según el problema (y tenga sentido), diseña un juego de datos de entrada aleatorios__"
       ]
     },
     {
@@ -577,7 +577,7 @@
         "id": "zy5ZROmjlGo1"
       },
       "source": [
-        "# Aplica el algoritmo al juego de datos generado"
+        "# __Aplica el algoritmo al juego de datos generado__"
       ]
     },
     {
@@ -644,7 +644,7 @@
         "id": "eTFWUJQrtGcv"
       },
       "source": [
-        "# Enumera las referencias que has utilizado (si ha sido necesario) para llevar a cabo el trabajo"
+        "# __Enumera las referencias que has utilizado (si ha sido necesario) para llevar a cabo el trabajo__"
       ]
     },
     {
@@ -664,7 +664,7 @@
         "id": "kAkDPUyRtYyH"
       },
       "source": [
-        "# Describe brevemente las lineas de cómo crees que es posible avanzar en el estudio del problema. Ten en cuenta incluso posibles variaciones del problema y/o variaciones al alza del tamaño"
+        "# __Describe brevemente las lineas de cómo crees que es posible avanzar en el estudio del problema. Ten en cuenta incluso posibles variaciones del problema y/o variaciones al alza del tamaño__"
       ]
     },
     {
