--- a/Seminario_Algoritmos_Gabriel_Freire.ipynb
+++ b/Seminario_Algoritmos_Gabriel_Freire.ipynb
@@ -30,7 +30,7 @@
         "id": "hVbXYX-RfPWh"
       },
       "source": [
-        "# Algoritmos de optimización - Seminario<br>\n",
+        "# ___Algoritmos de optimización - Seminario___\n",
         "**Nombre y Apellidos:** Gabriel David Freire Luna   <br>\n",
         "Url: https://github.com/gabrielfreire08/03MIAR-Algoritmos-de-Optimizacion-/blob/main/Seminario_Algoritmos_Gabriel_Freire.ipynb<br>\n",
         "**Problema:**\n",
