--- a/Seminario_Algoritmos_Gabriel_Freire.ipynb
+++ b/Seminario_Algoritmos_Gabriel_Freire.ipynb
@@ -100,7 +100,7 @@
       },
       "source": [
         "# **Modelo para el espacio de soluciones<br>**\n",
-        "# (*) ¿Cual es la estructura de datos que mejor se adapta al problema? Argumentalo.(Es posible que hayas elegido una al principio y veas la necesidad de cambiar, arguentalo)\n"
+        "# __(*) ¿Cual es la estructura de datos que mejor se adapta al problema? Argumentalo.(Es posible que hayas elegido una al principio y veas la necesidad de cambiar, arguentalo)__\n"
       ]
     },
     {
@@ -121,7 +121,7 @@
       },
       "source": [
         "# **Según el modelo para el espacio de soluciones<br>**\n",
-        "# (*)¿Cual es la función objetivo?"
+        "# __(*)¿Cual es la función objetivo?__"
       ]
     },
     {
@@ -139,7 +139,7 @@
         "id": "d0kWmp-0ijEQ"
       },
       "source": [
-        "# (*)¿Es un problema de maximización o minimización?"
+        "# __(*)¿Es un problema de maximización o minimización?__"
       ]
     },
     {
@@ -240,7 +240,7 @@
         "id": "tgrnsC2nkFa8"
       },
       "source": [
-        "**# Calcula la complejidad del algoritmo por fuerza bruta**"
+        "# __Calcula la complejidad del algoritmo por fuerza bruta__"
       ]
     },
     {
