--- a/Seminario_Algoritmos_Gabriel_Freire.ipynb
+++ b/Seminario_Algoritmos_Gabriel_Freire.ipynb
@@ -50,6 +50,42 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "U3J6KfaILaKC"
+      },
+      "source": [
+        "# __(*)¿Qué valor máximo y mínimo se pueden obtener según las condiciones del problema?<br>__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lhQoD_U3LoF6"
+      },
+      "source": [
+        "**Respuesta:** Según las condiciones del problema, el valor mínimo entero que se puede encontrar es el -69, y el valor máximo que se puede encontrar es el 77."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t_zJaOh7Lonu"
+      },
+      "source": [
+        "# __(*)¿Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo?<br>__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EAJRZ-FMLx5Q"
+      },
+      "source": [
+        "**Respuesta:** Sí, se pueden encontrar posibles combinaciones de operaciones aritméticas para todos los números enteros desde el -69 hasta el 77."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "3_-exlrTgLd-"
       },
       "source": [
@@ -90,7 +126,7 @@
         "\n",
         "Tomando esto en consideración vemos existen: 9! = 362.880 posibilidades, pero de las cuales sólo 90.000 posibles soluciones son enteras (aplicando fuerza bruta).\n",
         "\n",
-        "Cabe recalcar que se esta combinación de 5 dígitos y 4 operadores, sin repetirese, sólo pueden dar posibles soluciones de número enteros en el rango de [-69, 70], sin excepción, es decir, todos los número enteros en el rango mencionado."
+        "Cabe recalcar que se esta combinación de 5 dígitos y 4 operadores, sin repetirese, sólo pueden dar posibles soluciones de números en el rango de [-69, 77]. Se pueden encontrar todos los números enteros dentro de este rango y varios otros valores de números con decimales. "
       ]
     },
     {
@@ -176,7 +212,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "26b7afec-76c5-49fc-ce81-62b2818e6548"
+        "outputId": "96689118-815d-41da-cd5f-90a328606a64"
       },
       "source": [
         "from itertools import permutations\n",
@@ -217,18 +253,16 @@
         "\n",
         "print(\"El valor a encontrar la expresión aritmétcia es: {}\".format(target))\n",
         "print(\"La expresión arimética es: {}\".format(expresion))\n",
-        "print(\"--- %s seconds ---\" % (time.time() - start_time))\n",
-        "#Siempre me va a dar el primer valor de posibles soluciones de expresiones\n",
-        "#aritméticas."
+        "print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "El valor a encontrar la expresión aritmétcia es: 0\n",
             "La expresión arimética es: 1-2/3*9+5\n",
-            "--- 3.2382633686065674 seconds ---\n"
+            "--- 3.3003289699554443 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -482,7 +516,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Srk_bbqYhgxw",
-        "outputId": "7047f2b2-6dde-488c-84a2-4da86ed8da8b"
+        "outputId": "a2df1b4e-153d-451c-ea1b-164255fbb820"
       },
       "source": [
         "from itertools import permutations\n",
@@ -494,7 +528,7 @@
         "\n",
         "#Ingresamos el valor objetivo\n",
         "#target = int(input(\"Ingrese valor a encontrar expresión aritmética: \"))\n",
-        "target = 7\n",
+        "target = 0\n",
         "\n",
         "#Por fuerza bruta, pudimos encontrar que el mínimo valor entero que se puede crear es el 69\n",
         "#mientras que el máximo valor que se puede encontrar por fuerza bruta es el 77.\n",
@@ -510,8 +544,8 @@
         {
           "output_type": "stream",
           "text": [
-            "La expresión arimética es: 8/4-1*2+7\n",
-            "--- 0.03131604194641113 seconds ---\n"
+            "La expresión arimética es: 1-8/4*2+3\n",
+            "--- 0.010764598846435547 seconds ---\n"
           ],
           "name": "stdout"
         }
@@ -556,7 +590,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sJ-N2etjkyWc"
+        "id": "sJ-N2etjkyWc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6f6807c2-3d33-4cc9-f59b-f4c03e045301"
       },
       "source": [
         "random_list = []\n",
@@ -566,10 +604,20 @@
         "\n",
         "for i in range(0,cantidad):\n",
         "  n = random.randint(minimo,maximo)\n",
-        "  random_list.append(n)"
+        "  random_list.append(n)\n",
+        "\n",
+        "print(random_list)"
       ],
-      "execution_count": 9,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5, -1, 2, -9, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -596,43 +644,43 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xh_DZjUuiGbx",
-        "outputId": "704e283c-71e5-4e59-bfe8-0f3003175171"
+        "outputId": "5c5b460e-8aa8-472a-bc43-a58b36072e77"
       },
       "source": [
         "from itertools import permutations\n",
         "import random\n",
         "import time\n",
         "\n",
-        "#Calculamos el tiempo de ejecución del algoritmo\n",
-        "start_time = time.time()\n",
-        "\n",
         "for i in random_list:\n",
+        "  #Calculamos el tiempo de ejecución del algoritmo\n",
+        "  start_time = time.time()\n",
+        "\n",
         "  #Ingresamos el valor objetivo\n",
         "  expresion = problema3 (i)\n",
         "  print(\"El valor aleatorio a buscar la expresión aritmética es: {}\".format(i))\n",
         "  print(\"La expresión arimética es: {}\".format(expresion))\n",
         "  print(\"--- %s seconds ---\" % (time.time() - start_time))"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "El valor aleatorio a buscar la expresión aritmética es: 5\n",
+            "La expresión arimética es: 8/4+9*1-6\n",
+            "--- 0.04512810707092285 seconds ---\n",
             "El valor aleatorio a buscar la expresión aritmética es: -1\n",
-            "La expresión arimética es: 6*1+8/4-9\n",
-            "--- 0.06167101860046387 seconds ---\n",
-            "El valor aleatorio a buscar la expresión aritmética es: -1\n",
-            "La expresión arimética es: 8/2-9*1+4\n",
-            "--- 0.09916973114013672 seconds ---\n",
-            "El valor aleatorio a buscar la expresión aritmética es: 4\n",
-            "La expresión arimética es: 3*8/4+5-7\n",
-            "--- 0.14244413375854492 seconds ---\n",
-            "El valor aleatorio a buscar la expresión aritmética es: -5\n",
-            "La expresión arimética es: 4/8*6+1-9\n",
-            "--- 0.2794477939605713 seconds ---\n",
-            "El valor aleatorio a buscar la expresión aritmética es: -1\n",
-            "La expresión arimética es: 3/2*4+1-8\n",
-            "--- 0.2866511344909668 seconds ---\n"
+            "La expresión arimética es: 1*6+8/4-9\n",
+            "--- 0.038065433502197266 seconds ---\n",
+            "El valor aleatorio a buscar la expresión aritmética es: 2\n",
+            "La expresión arimética es: 4+9/3-5*1\n",
+            "--- 0.02972888946533203 seconds ---\n",
+            "El valor aleatorio a buscar la expresión aritmética es: -9\n",
+            "La expresión arimética es: 7/1+8-4*6\n",
+            "--- 0.049750566482543945 seconds ---\n",
+            "El valor aleatorio a buscar la expresión aritmética es: 5\n",
+            "La expresión arimética es: 1*7-5+6/2\n",
+            "--- 0.02877187728881836 seconds ---\n"
           ],
           "name": "stdout"
         }
