--- a/Seminario_Algoritmos_Gabriel_Freire.ipynb
+++ b/Seminario_Algoritmos_Gabriel_Freire.ipynb
@@ -32,7 +32,10 @@
       "source": [
         "# ___Algoritmos de optimización - Seminario___\n",
         "**Nombre y Apellidos:** Gabriel David Freire Luna   <br>\n",
-        "Url: https://github.com/gabrielfreire08/03MIAR-Algoritmos-de-Optimizacion-/blob/main/Seminario_Algoritmos_Gabriel_Freire.ipynb<br>\n",
+        "URL GitHub: https://github.com/gabrielfreire08/03MIAR-Algoritmos-de-Optimizacion-/blob/main/Seminario_Algoritmos_Gabriel_Freire.ipynb<br>\n",
+        "\n",
+        "URL Google Drive: https://colab.research.google.com/drive/17mz4xQDvCG9xxMG4LHXcG-5pxRGyP_h2?usp=sharing\n",
+        "\n",
         "**Problema:**\n",
         "\n",
         "**>3. Combinar cifras y operaciones**\n",
